[package]
name = "rust-actix-web-service"
version = "1.0.0"
authors = ["stefano"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-rt = "1.0.0"
actix-web = "2.0.0"
env_logger = "0.7"
futures = "0.3.1"
tokio = "0.2.13"
#mysql_async = "0.23.1"
dotenv = "0.15.0"
listenfd = "0.3"
urlqstring = "0.3.5"
json = "0.12"
bytes = "0.5.2"
mysql = "18.2.0"
actix-redis = "0.8.0"
redis-async = "0.6.1"
serde = { version = "1.0.71", features = ["derive"] }


[dependencies.actix-files]
version = "0.2.1"

[dependencies.base64]
version = "0.12"

[dependencies.hex]
version = "0.4"

[dependencies.lazy_static]
version = "1.4"

[dependencies.openssl]
version = "0.10"

[dependencies.percent-encoding]
version = "2.1.0"

[dependencies.rand]
version = "0.7"

[dependencies.regex]
version = "1.3.5"

[dependencies.reqwest]
version = "0.10.4"
features = [ "json" ]

[dependencies.serde_json]
version = "1.0"

[dependencies.structopt]
version = "0.3.12"