[package]
name = "rust-actix-web-service"
version = "1.0.0"
authors = ["stefano"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-rt = "1.0.0"
actix-web = "2.0.0"
env_logger = "0.7"
futures = "0.3.5"
dotenv = "0.15.0"
listenfd = "0.3"
urlqstring = "0.3.5"
json = "0.12"
bytes = "0.5.2"
mysql = "18.2.0"
serde = { version = "1.0.71", features = ["derive"] }
openssl = { version = "0.10", features = ["vendored"] }
mobc-redis = "0.5.3"
mobc = "0.5.7"
tokio = {version = "0.2.13", features = ["full"]}
elasticsearch = "7.8.1-alpha.1"
url = "2.1.1"
dgraph-tonic = "0.5.0"
threadpool = "1.8.0"
rayon = "1.3.0"
jsonwebtoken = "7"
chrono = "0.3.0"


[dependencies.actix-files]
version = "0.2.1"
[dependencies.base64]
version = "0.12"
[dependencies.hex]
version = "0.4"
[dependencies.lazy_static]
version = "1.4"
[dependencies.percent-encoding]
version = "2.1.0"
[dependencies.rand]
version = "0.7"
[dependencies.regex]
version = "1.3.5"
[dependencies.reqwest]
version = "0.10.4"
features = [ "json" ]
[dependencies.serde_json]
version = "1.0"
[dependencies.structopt]
version = "0.3.12"


# release
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
