[package]
name = "rust-actix-web-service"
version = "0.1.0"
authors = ["stefano <huzhichao502@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-rt = "1.1.1"
actix-web = "3.2.0"
actix-service = "1.0.6"
actix-files = "0.3.0"
env_logger = "0.7"
futures = "0.3.7"
dotenv = "0.15.0"
listenfd = "0.3"
urlqstring = "0.3.5"
json = "0.12"
bytes = "0.5.2"
mysql = "20.0.1"
serde = { version = "1.0.71", features = ["derive"] }
openssl = { version = "0.10", features = ["vendored"] }
mobc-redis = "0.5.3"
mobc = "0.5.12"
tokio = {version = "0.3", features = ["full"]}
elasticsearch = "7.9.0-alpha.1"
url = "2.1.1"
dgraph-tonic = "0.5.0"
threadpool = "1.8.0"
rayon = "1.3.0"
jsonwebtoken = "7.2.0"
chrono = "0.3.0"
curl = "0.4.33"
serde_json = "1.0.57"


[dependencies.structopt]
version = "0.3.12"


# release
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
